--- a/Mod2FPstyle.css
+++ b/Mod2FPstyle.css
@@ -128,6 +128,10 @@ start
      display: flex;
 }
 
+.container__start {
+     padding: 80px 0;
+}
+
 .design__img--container {
      max-width: 60%;
 }
@@ -142,11 +146,12 @@ start
 
 .sign-up__wrapper {
      border: none;
+     padding-left: 1px;
 }
 
 .btn__e-mail--submit {
      border: none;
-         z-index: 2;
+     z-index: 2;
     margin: 8px;
     height: calc(100% - 16px);
     border-radius: 500px;
@@ -190,7 +195,9 @@ FEATURES
 */
 
 
-
+#features {
+     padding-top: 150px;
+}
 
 
 .features__wrapper {
@@ -208,24 +215,27 @@ FEATURES
 .features__top,
 .features__title,
 .features__description {
-     padding-bottom: 20px;
+     padding-bottom: 32px;
 }
 
-.features__description {
-     padding-left: 336px; 
-     padding-right: 336px;
-}
 
-.features__lists {
-     display: flex;
-     flex-wrap: wrap;
-
-}
 
 .list__highlight {
      display: flex;
      max-width: calc(100%/3);
 }
+
+.features__lists {
+     padding-bottom: 100px;
+}
+
+.features__lists--highlights {
+     display: flex;
+     flex-wrap: wrap;
+     list-style: none; /* removes bullet points */
+     padding: 0; /* removes default ul padding */
+     margin: 0;
+}     
 
 .list__highlight--label {
      font-size: 24px;
@@ -245,10 +255,110 @@ FEATURES
      border-radius: 50%;
      height: 40px;
      width: 40px;
-     padding-right: 16px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     margin: 0 16px 0 0;
+     flex-shrink: 0; 
+}
+
+.list__highlight--img {
+     max-width: 100%;
+     max-height: 100%;
+}
+
+/* QUALITY*/
+
+#quality {
+     padding-top: 150px;
+}
+
+.quality__wrapper{
+     width: 100%;
+     max-width: 1200px;
+     margin: 0 auto;
+     display: flex;
+     }
+
+.quality__headline {
+     max-width: 50%;
+     display: flex;
+     flex-direction: column;
+     align-items: left;
+     padding-right: 56px;
+}
+
+.quality {
+     padding-bottom: 32px;
+     letter-spacing: 1.5px;
+}
+
+.quality__title {
+     font-weight: 900px;
+     padding-bottom: 32px;
+}
+
+.quality__description {
+     opacity: .5;
+     padding-bottom: 32px;
+}
+
+.quality__btn {
+    max-width: 140px;
 }
 
 
+.quality__img--wrapper {
+     max-width: 50%;
+     padding-left: 48px;
+    
+}
 
+.quality__img {
+     width: 90%;
+     border: 1px solid #243e63;
+}
 
+/* 
+STEPS
+*/
+
+#steps {
+     padding-top: 150px;
+     width: 100%;
+     max-width: 1200px;
+     margin: 0 auto;
+}
+
+.steps__row {
+     display: flex;
+     justify-content: space-between;
+}
+
+.steps__img--wrapper
+ {
+    width: 50%;
+}
+
+.steps__img {
+     width: 100%;
+}
+
+.steps__1-2-3 {
+     width: 50%;
+     display: flex;
+        flex-direction: column;
+}
+
+.steps__1-2-3:hover {
+     text-decoration: none;
+}
+
+.steps__description {
+     opacity: .5;
+
+}
+.steps__list {
+     display: flex;
+}
 
