--- a/Mod2FPstyle.css
+++ b/Mod2FPstyle.css
@@ -50,7 +50,12 @@ h3 {
      font-size: 24px;
 }
 
-h4 {font-size: 16px;}
+h4 {font-size: 16px;
+    color: #6415ff;
+    letter-spacing: 1.6px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
 
 p {
      font-size: 18px;
@@ -196,12 +201,8 @@ FEATURES
 */
 
 
-#features {
-     padding-top: 150px;
-}
-
-
-.features__wrapper {
+.features__row {
+     padding: 80px 0;
      width: 100%;
      max-width: 1200px;
      margin: 0 auto;
@@ -227,7 +228,7 @@ FEATURES
 }
 
 .features__lists {
-     padding-bottom: 100px;
+     padding: 80px 0;
 }
 
 .features__lists--highlights {
@@ -270,11 +271,8 @@ FEATURES
 
 /* QUALITY*/
 
-#quality {
-     padding-top: 150px;
-}
-
-.quality__wrapper{
+.quality__row{
+     padding: 80px 0;
      width: 100%;
      max-width: 1200px;
      margin: 0 auto;
@@ -329,19 +327,17 @@ FEATURES
 STEPS
 */
 
-#steps {
-     padding-top: 150px;
-     width: 100%;
-     max-width: 1200px;
-     margin: 0 auto;
-}
 
 .steps__row {
      display: flex;
+      padding-top: 150px;
+     width: 100%;
+     max-width: 1200px;
+     margin: 0 auto;
+     padding: 80px 0;
 }
 
 .steps__img--container {
-     padding-top: 136px;
      width: 50%;
 }
 
@@ -372,4 +368,113 @@ STEPS
      opacity: .5;
      font-weight: 600;
      padding-right: 12px;
+}
+
+/*
+VALUES
+*/
+
+
+.values__row {
+     display: flex;
+     width: 100%;
+     max-width: 1200px;
+     margin: 0 auto;
+     padding: 80px 0;
+}
+
+.values__img--container {
+     max-width: 50%;
+}
+
+.values__img {
+     max-width: 100%;
+}
+
+.values__wrapper {
+     max-width: 50%;
+     padding-right: 36px;
+}
+
+.values__super-title  {
+     padding-bottom: 20px;
+}
+
+.values__title,
+.values__description {
+     padding-bottom: 32px;
+}
+
+.value__title {
+     display: flex;
+     padding-bottom: 20px;
+}
+
+.value__name{
+     padding-left: 24px;
+}
+.values__points {
+     display: flex;
+     padding-bottom: 36px;
+}
+
+.value__dollar--wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+  border: 5px solid #9ae6b4;
+  border-radius: 50%;
+  background-color: #9ae6b4;
+  height: 36px;
+  width: 36px; 
+}
+
+.value__dollar--img,
+.value__case--img {
+     height: 20px;
+     width: 20px;
+}
+
+.value__briefcase--wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;   
+  border: 5px solid #feb2b2;
+  border-radius: 50%;
+  background-color: #feb2b2;
+  height: 36px;
+  width: 36px;   
+}
+
+.value__description {
+     padding-right: 24px;
+     line-height: 1.625;
+    color: #718096;
+    font-size: 16px;
+}
+
+.values__btn {
+     max-width: 140px;
+     font-size: 12px;
+     font-weight: bold;
+}
+
+.values__btn:hover {
+     background-color: #38079b;
+     color: #fff;
+}
+
+/*
+PRICING
+*/
+
+.pricing__row {
+     width: 100%;
+     max-width: 1200px;
+     margin: 0 auto;
+     padding: 80px 0;
+}
+
+.pricing__title--wrapper {
+     text-align: center;
 }
