--- a/Mod2FPstyle.css
+++ b/Mod2FPstyle.css
@@ -125,12 +125,14 @@ start
 
 */
 
-.start {
+.start__row {
      display: flex;
-}
-
-.container__start {
      padding: 80px 0;
+     width: 100%;
+     max-width: 1200px;
+     margin: 0 auto;
+     align-items: center;
+     justify-content: space-between;
 }
 
 .design__img--container {
@@ -475,6 +477,234 @@ PRICING
      padding: 80px 0;
 }
 
+.pricing__super-title {
+     letter-spacing: 1.6px;
+     padding-bottom: 24px;
+}
+
+.pricing__title {
+     padding-bottom: 36px;
+}
+
+.pricing__description {
+     text-align: center;
+     position: relative;
+     padding: 0 250px;
+}
+
 .pricing__title--wrapper {
      text-align: center;
+     padding-bottom: 48px;
+}
+
+.pricing__option--boxes {
+     display: flex;
+     justify-content: space-around
+}
+
+.pricing__boxes {
+     text-align: center;
+      width: 100%;
+    max-width: 384px;
+    margin: 64px 32px 0 0;
+    padding-top: 8px;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    position: relative;
+    z-index: 100;
+    background: #fff;
+}
+
+.pricing__stripe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 8px;
+}
+
+.pricing__boxes:nth-child(2) {
+    background: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
+}
+
+.pricing__boxes:nth-child(2) .plan__type, .pricing__boxes:nth-child(2) .plan__price, .pricing__boxes:nth-child(2) .plan__consumer, .pricing__boxes:nth-child(2) .plan__duration, .pricing__boxes:nth-child(2) .plan__feature {
+    color: #f7fafc;
+    opacity: 1;
+}
+
+.pricing__boxes:nth-child(1) .pricing__stripe, .pricing__boxes:nth-child(1) .btn__buy {
+    color: #f7fafc;
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+}
+
+.pricing__boxes:nth-child(3) .pricing__stripe, .pricing__boxes:nth-child(3) .btn__enterprise {
+    color: #f7fafc;
+    background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+}
+
+
+
+.plan__top,
+.plan__middle,
+.plan__bottom {
+     padding: 36px 0;
+}
+
+.plan__type,
+.plan__duration,
+.plan__price {
+     font-weight: bold;
+     line-height: 1.625;
+}
+
+.plan__price {
+    font-size: 48px;
+    margin: 4px 0;
+}
+
+.plan__duration {
+     opacity: .5;
+}
+
+.plan__feature {
+    margin-top: 20px;
+    font-weight: 500;
+    color: #718096;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.btn__buy {
+    text-transform: uppercase;
+    text-align: center;
+    padding: 16px 32px;
+    border-radius: 500px;
+    border: none;
+    font-size: 14px;
+    width: 100%;
+    max-width: 192px;
+    font-weight: bold;
+    letter-spacing: 0.05em;
+    line-height: 1.5;
+    transition: all 300ms;
+}
+
+.btn__personal {
+     color: #f7fafc;
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+}
+
+.btn__business {
+     color: #6415ff;
+}
+
+
+/* 
+TESTAMONIALS
+*/
+
+
+.testamonials__row {
+     width: 100%;
+     max-width: 1200px;
+     margin: 0 auto;
+     padding: 80px 0;
+     display: flex;
+     justify-content: space-between;
+}
+
+.testamonials__img--container {
+     max-width: 40%;
+}
+
+.values__img {
+     max-width: 100%;
+     padding-top: 220px;
+}
+
+.testamonials__wrapper {
+     max-width: 50%;
+}     
+
+
+.testamonials__title--wrapper {
+     align-items: left;
+     max-width: 50%;
+}
+
+.testamonials__super-title {
+     letter-spacing: 1.6px;
+     padding-bottom: 24px;
+}
+
+.testamonials__title {
+     padding-bottom: 36px;
+     font-size: 48px;
+    font-weight: 900;
+    color: rgb(36, 62, 99);
+    line-height: 1.5;
+    margin: 16px 0;
+    letter-spacing: 0.025em;
+}
+
+.testamonials__description {
+     font-size: 18px;
+    font-weight: 500;
+    color: #7c8ba1;
+    line-height: 1.625;
+    padding-bottom: 36px;
+}
+
+.testamonials__description {
+     text-align: center;
+     position: relative;
+     
+}
+
+.stars {
+     display: flex;
+     }
+
+.client__testamonial {
+     padding-top: 36px;
+
+}
+
+.client__img--row {
+     display: flex;
+     padding-top: 36px;
+}
+
+.client__img--wrapper {
+     display: flex;
+     ;
+}
+
+.client__img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+
+.client__name--title {
+     margin: 0 200px 0 24px;
+}
+
+.btn__testamonials {
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+  border: 5px solid rgb(229, 231, 235);;
+  border-radius: 50%;
+  background-color: rgb(229, 231, 235);
+  height: 48px;
+  width: 48px;
+}
+
+.divider {
+     width: 1px;
+    height: 24px;
+    background: rgb(229, 231, 235);
+    margin: 0 16px;
 }
