--- a/Mod2FPstyle.css
+++ b/Mod2FPstyle.css
@@ -1,11 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 * {
-     font-family: "Inter", sans-serif;
+     font-family: "Inter", system-ui;
      padding: 0;
      margin: 0;
      box-sizing: border-box;
      color: #243e63 
+}
+
+body {
+     max-width: 100vw;
+     overflow-x: hidden;
+}
+
+main {
+     margin-bottom: 96px;
 }
 
 row {
@@ -25,6 +34,11 @@ a {
 a:hover {
      color: #6415ff;
      text-decoration: underline;
+     text-underline-offset: 4px;
+}
+
+.nav__link--btn:hover:hover {
+     text-decoration: none;
 }
 
 
@@ -82,7 +96,11 @@ p {
 
 /* navigation bar */
 
-.nav {
+.nav__link--btn {
+     transform: all 400ms ease;
+}
+
+.nav__row {
      display: flex;
      justify-content: space-between;
      align-items: center;
@@ -150,6 +168,7 @@ start
 .sign-up__wrapper {
      border: none;
      padding-left: 1px;
+     position: relative;
 }
 
 .btn__e-mail--submit {
@@ -159,10 +178,16 @@ start
     height: calc(100% - 16px);
     border-radius: 500px;
     width: 160px;
-    border: 2px solid #243e63;
     border-radius: 50px;
     padding: 16px 36px;
     max-width: fit-content;
+    transition: all 300ms ease;
+    opacity: 1;
+}
+
+.btn__e-mail--submit:hover {
+     background-color: #38079b;
+     color: #fff;
 }
 
 .img__logo-strip {
@@ -172,17 +197,23 @@ start
 .sign-up__btn {
      position: relative;
      justify-content: space-between;
-     border: 2px solid #243e63;
+     border: 2px solid #c5cad2;
      border-radius: 50px;
      padding: 2px;
      max-width: fit-content;
-     
+     font-weight: 500px;
+    transition: all 300ms ease;
+    }
+
+.sign-up__btn:hover {
+     border: 2px solid #304a74;
 }
 
-.btn__e-mail--submit:hover {
-     background-color: #38079b;
-     color: #fff;
+.sign-up__wrapper {
+     padding-left: 12px;
+     opacity: 1;
 }
+
 
 .sign-up {
      max-width: 40%;
@@ -345,6 +376,8 @@ STEPS
 
 .steps__img {
      width: 100%;
+     padding-right: 76px;
+     padding-top: 76px
 }
 
 .steps__list--wrapper {
@@ -684,7 +717,6 @@ TESTAMONIALS
 
 .client__img--wrapper {
      display: flex;
-     ;
 }
 
 .client__img {
@@ -729,7 +761,7 @@ GET-STARTED
     width: 100%;
     max-width: 1280px;
     margin: 0 auto;
-    padding-bottom: 160px;
+     padding: 80px 0;
 }
 
 .start__wrap {
@@ -883,4 +915,66 @@ footer {
      background-color: rgb(186, 188, 191);
 }
 
-/*color: #f7fafc;*/
+
+/*
+MOBILE RESPONSIVENESS
+*/
+
+@media (max-width: 1280px) {
+     .nav__row {
+          align-items: flex-end;
+     }
+}
+
+@media (max-width: 1024px) {
+     .start__btn {
+          display: block;
+     }
+     .nav__row {
+          flex-direction: column;
+          align-items: center;
+     }
+
+     footer {
+          padding: 80px 32px;
+     }
+}
+
+@media (max-width: 786px) {
+     .sign-up__row,
+     .quality__row,
+     .values__row {
+          flex-direction: column-reverse;
+          align-items: center;
+     }
+
+     .steps__row,
+     .testamonials__row {
+          flex-direction: column;
+          align-items: center;
+     }
+
+     .pricing__row {
+          margin-top: 40px;
+     }
+
+     .sign-up__btn {
+          min-width: 378px;
+     }
+
+     .quality__headline {
+          align-items: center;
+          padding-top: 48px;
+     }
+
+     .value__name {
+          padding-right: 36px;
+     }
+
+     .values__img {
+          padding-bottom: 48px;
+     }
+
+
+}
+
