--- a/style.css
+++ b/style.css
@@ -107,14 +107,15 @@ p {
     position: absolute;
     background-color: #f7fafc;
     color: #1a202c;
-    top: 0;
-    left: 0;
-    right: 0;
+    top: 16px;
+    left: 16px;
+    right: 16px;
     z-index: 100;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 8px;
+    border-radius: 16px;
+    border: 1px solid #dae0ea;
     overflow: hidden;
     transition: all 300ms ease;
     visibility: hidden;
@@ -733,7 +734,9 @@ TESTAMONIALS
      margin: 0 auto;
      padding: 80px 0;
      display: flex;
-     justify-content: space-between;
+     justify-content: center;
+     align-items: center;
+     gap: 40px;
 }
 
 .testamonials__img--container {
@@ -868,11 +871,15 @@ GET-STARTED
     font-weight: 700;
     line-height: 1.5;
     z-index: 2;
+    padding-left: 36px;
 }
 
 .start__title,
 .start__btn {
      width: 50%;
+}
+.start__btn {
+     display: flex;
 }
 
 .btn__start,
@@ -884,7 +891,7 @@ GET-STARTED
     color: #f7fafc;
     line-height: 1.5;
     letter-spacing: 0.025em;
-    margin: 1px;
+    margin: 8px;
     z-index: 2;
     min-width: 180px;
 }
@@ -1007,9 +1014,13 @@ MOBILE RESPONSIVENESS
 @media (max-width: 1280px) {
      .nav__row {
           align-items: flex-end;
+          display: flex;
+          flex-wrap: wrap;
      }
 
-     
+     .btn__menu {
+          padding-top: 24px;
+     }
 }
 
 @media (max-width: 1024px) {
@@ -1039,7 +1050,7 @@ MOBILE RESPONSIVENESS
           flex-direction: column;
           align-items: center;
      }
-
+      
      .features__row,
      .quality__row,
      .steps__row,
@@ -1061,6 +1072,34 @@ MOBILE RESPONSIVENESS
 }    
 
 @media (max-width: 786px) {
+
+         .sign-up__btn {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        border: none;
+    }
+    .sign-up__btn:hover {
+     border: none;
+    }
+    
+    .sign-up__wrapper {
+        border: 1px solid #ccc;
+        padding: 16px;
+        border-radius: 28px;
+        max-width: 400px;
+        width: 100%;
+        position: static;
+    }
+    
+    .btn__e-mail--submit {
+        position: static;
+        margin: 0;
+        max-width: 400px;
+        width: 100%;
+        height: auto;
+        z-index: auto;
+    }
      .sign-up__row,
      .quality__row,
      .values__row {
@@ -1073,9 +1112,24 @@ MOBILE RESPONSIVENESS
           flex-direction: column;
           align-items: center;
      }
+      
+    .testamonials__title--wrapper {
+        max-width: 90%; 
+        text-align: center; 
+    }
+    
+    .testamonials__img--container {
+        max-width: 90%;
+        text-align: center;
+    }
 
      .pricing__row {
           margin-top: 40px;
+     }
+
+     .start__title {
+          align-items: center;
+         
      }
 
      .sign-up__btn {
@@ -1101,21 +1155,28 @@ MOBILE RESPONSIVENESS
           display: flex;
           flex-direction: column;
      }
-     .divider {
-          display: none;
+    
+     .btn__testamonials--wrapper {
+          display: flex;
+          padding-top: 24px;
+     }   
+       
+     .client__img--wrapper {
+          justify-content: center;
      }
-     
-     .start__title {
-          display: none;
-     }
-
-
+    
 
 }
+
 
 @media (max-width: 575px) {
      .start__wrap {
           display: flex;
           justify-content: space-around;
      }
+     .start__title {
+          display: none;
+     }
 }
+
+
